--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,3 @@
-/* Estilo para el separador */
-.separator {
-    margin-bottom: 10px; /* Espacio entre elementos */
+.campo {
+    margin-bottom: 20px;  
 }
